Changed formatting of html file.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <canvas id="canvas" tabindex="1" width="1350" height="600" 
     style="border: 1px solid brown; background: lightskyblue"></canvas>
-    <h2>Movement: Left Arrow, Right Arrow | Attacks: 1, 2</h2>
+    <h1 style="text-align: center; font-family: Arial, Helvetica, sans-serif">TCSS 491 Computational World</h1>
+    <h2 style="text-align: center; font-family: Arial, Helvetica, sans-serif">Movement: Left Arrow, Right Arrow</h2>
+    <h2 style="text-align: center; font-family: Arial, Helvetica, sans-serif">Abilities: 1, 2</h2>
 </body>
 </html>
